Externalized setting for escape key.

--- a/CodingKeys/data/settings.json
+++ b/CodingKeys/data/settings.json
@@ -2,6 +2,7 @@
  {
  "enableDynamicRegistration": true,
  "enableChordTimer": false,
- "chordTimeout": 8.0
+ "chordTimeout": 8.0,
+ "chordEscapeKey": "⎋"
  }
 ]
