Externalized escape count to settings file.

--- a/CodingKeys/data/settings.json
+++ b/CodingKeys/data/settings.json
@@ -3,6 +3,7 @@
  "enableDynamicRegistration": true,
  "enableChordTimer": false,
  "chordTimeout": 8.0,
- "chordEscapeKey": "⎋"
+ "chordEscapeKey": "⎋",
+ "chordEscapeKeyCount": 4
  }
 ]
